# intent-kit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  formatted_release_notes.txt  intent-driven.md  pyproject.toml  release.sh  release_notes.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: intent-issue.md
.github/PULL_REQUEST_TEMPLATE/: intent-pr-template.md
.github/workflows/: build-cli.yml  ci.yml  release-all.yml  release.yml  tag-release.yml  templates.yml
docs/: README.md  command-reference.md  goal-definition.md  intent-driven-overview.md  quick-start.md  vision-creation.md
examples/: README.md  authentication-example.md
media/: idd-process.md
memory/: README.md  constitution.md  patterns.md
scripts/bash/: create-analysis-report.sh  create-checklist.sh  create-clarify-questions.sh  create-new-execute.sh  create-new-goal.sh  create-new-milestone.sh  create-new-strategy.sh  create-new-vision.sh  update-agent-context.sh
scripts/powershell/: create-analysis-report.ps1  create-checklist.ps1  create-clarify-questions.ps1  create-new-execute.ps1  create-new-goal.ps1  create-new-milestone.ps1  create-new-strategy.ps1  create-new-vision.ps1  update-agent-context.ps1
src/intent_kit/: __init__.py
templates/: README.md  agent-file-template.md  execute-template.md  goal-template.md  milestone-template.md  strategy-template.md  vision-template.md  vscode-settings.json
templates/commands/: intentk.analyze.md  intentk.checklist.md  intentk.clarify.md  (+5 more)
(+5 files in other folders)
