[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-kit"
description = "Intent Kit - A toolkit for Intent-Driven Development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kaiden"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.0.15"

[project.scripts]
intent = "intent_kit:main"

[project.entry-points."console_scripts"]
intent = "intent_kit:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
    "httpx>=0.25.0",
    "truststore>=0.8.0",
]



[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']